--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ volumes:
 
 services:
   owncloud:
-    image: owncloud/server:${OWNCLOUD_VERSION}
+    #image: owncloud/server:${OWNCLOUD_VERSION}
+    build: .
     restart: always
     ports:
       - ${HTTP_PORT}:8080
